# metador-push

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  Dockerfile  LICENSE  README.md  docker-scripts.sh  index.html  metador-push-tusd-nginx.conf  metador-push-tusd.service  metador-push.def.toml  metador-push.service  metador-tusd-nginx.conf  metador-tusd.service  metador.def.toml  metador.html  metador.service  package-lock.json  profile.schema.json  pyproject.toml  search.js
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml
frontend/: .eslintrc.js  .prettierrc.json  README.md  babel.config.json  package-lock.json  package.json  postcss.config.js  rollup.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.svelte  AuthButton.svelte  CustomTextWidget.tsx  Dataset.svelte  DatasetSelection.svelte  FileManager.svelte  Message.svelte  MetadataEditor.svelte  MetadataForm.svelte  ProfileViewer.svelte  util.ts
metador/: __init__.py  api.html  api.py  cli.html  cli.py  config.html  config.py  core.py  dataset.html  dataset.py  global.py  hookmodel.py  log.html  log.py  orcid.html  orcid.py  postprocessing.html  postprocessing.py  profile.html  profile.py  server.html  server.py  upload.html  upload.py  util.html  util.py
metador/orcid/: __init__.py  api.html  api.py  auth.html  auth.py  mock.html  mock.py  util.html  util.py
metador_push/: __init__.py  api.py  cli.py  config.py  dataset.py  log.py  server.py  upload.py  util.py
metador_push/orcid/: api.py  mock.py  util.py
profiles/: README  anything.profile.json  custom_errors.profile.json  empty.profile.json  example.profile.json  generic.schema.json  tem_experiment.profile.json  tem_experiment.schema.json  transitive.schema.json  unsat.profile.json
schemas/: example.profile.json  metador_profile.schema.json
static/: app.js  base.js  index.html  routes.js
templates/: base.html  edit.html  index.html  not-allowed.html  signout.html  unauth.html  upload.html
tests/: __init__.py  conftest.py  mock_postproc.sh  test_api.py  test_auth.py  test_cli.py  test_conf.toml  test_config.py  test_dataset.py  test_profile.py  test_upload.py  testutil.py  util.py
