[tool.poetry]
name = "metador"
version = "0.1.0"
description = "Metador is a metadata-aware mailbox for research data."
authors = ["Anton Pirogov <a.pirogov@fz-juelich.de>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
fastapi = {extras = ["all"], version = "^0.65.1"}
python-multipart = "^0.0.5"
httpx = "^0.18.1"
toml = "^0.10.2"
colorlog = "^5.0.1"
jsonschema = {extras = ["format"], version = "^3.2.0"}

[tool.poetry.dev-dependencies]
pdoc = "^7.1.1"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"

[tool.poetry.scripts]
metador-cli = 'metador.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:aiofiles.*"]
