[tool.poetry]
name = "metador"
version = "0.1.0"
description = "Metador is a metadata-aware mailbox for research data."
authors = ["Anton Pirogov <a.pirogov@fz-juelich.de>"]
license = "MIT"
include = ["*.toml", "*.json", "profiles/*", "frontend/public/**/*"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
fastapi = {version = "0.70.1", extras = ["all"]}
python-multipart = "^0.0.5"
httpx = "^0.18.1"
toml = "^0.10.2"
colorlog = "^5.0.1"
jsonschema = {extras = ["format"], version = "^3.2.0"}
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
pdoc = "^7.1.1"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
aiotus = "^0.1.8"
importlib-metadata = "^4.6.1"
tox = "^3.23.1"

[tool.poetry.scripts]
metador-cli = 'metador.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# addopts = "--cov-report html"
addopts = "--cov-report=term-missing:skip-covered"
filterwarnings = [
  "ignore::DeprecationWarning:aiofiles.*",
  "ignore::DeprecationWarning:tenacity.*",
]

[tool.coverage.run]
source = ['metador']

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38, py39

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""
