[tool.poetry]
name = "metador-push"
version = "0.1.0"
description = "Metador Push is a metadata-aware mailbox for research data."
authors = ["Anton Pirogov <a.pirogov@fz-juelich.de>"]
license = "MIT"
include = ["*.toml", "*.json", "profiles/*", "frontend/public/**/*"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
fastapi = {version = "0.70.1", extras = ["all"]}
python-multipart = "^0.0.5"
httpx = "^0.18.1"
toml = "^0.10.2"
colorlog = "^5.0.1"
jsonschema = {extras = ["format"], version = "^4.14.0"}
typing-extensions = "^4.3.0"
pydantic = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pdoc = "^7.1.1"
pre-commit = "^2.13.0"
pytest-asyncio = "^0.15.1"
aiotus = "^0.1.8"
importlib-metadata = "^4.6.1"
aiohttp = "^3.8.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
metador-push = 'metador_push.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# addopts = "--cov-report html"
addopts = "--cov-report=term-missing:skip-covered"
filterwarnings = [
  "ignore::DeprecationWarning:aiofiles.*",
  "ignore::DeprecationWarning:tenacity.*",
]

[tool.coverage.run]
source = ['metador_push']
